puree-tests/src/test/resources/effects/pos/UsedOption.scala
object UsedOption {
  def f(): Option[Int] = {
    Option(1)
  }
}
