puree-tests/src/test/resources/effects/neg/Template1.scala
object Template1 {
  Option(1)
  ()
}
